<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GK</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="report_question">Report Question</string>
    <string name="title_activity_main">General Knowledge Quiz</string>
    <string name="title_activity_test_questions">GK Quiz</string>
    <string name="title_activity_view_score">Quiz Score</string>
    <string name="title_activity_view_answers">Quiz Answers</string>
    <string name="title_activity_splashstart">GENERAL KNOWLEDGE QUIZ</string>
    <string name="title_activity_description">Description</string>
    <string name="start_button_text">Start Quiz</string>
    <string name="practice_button_text">Start Practice</string>
    <string name="category_button_text">Settings</string>
    <string name="title_activity_quizoptions">Quiz Setting</string>
    <string name="viewscore_alert_box_title">Are you Sure ?</string>
    <string name="viewscore_alert_box_msg">This will move the Application in background ? </string>
    <string name="test_question_alert_box_msg">Do you want to close this quiz, you are doing great so far ? </string>
    <string name="alert_negative_button">Cancel</string>
    <string name="alert_positive_button">Okay</string>
    <string name="exit_alert_positive_button">Exit</string>
    <string name="title_activity_quiz_setting">Quiz Settings</string>
    <string name="title_activity_quiz_settings">Quiz Settings</string>
    <string name="share_answers">Share Quiz Answers</string>
    <string name="pref_category">Category</string>
    <string name="pref_category_summary">Select category of questions</string>
    <string name="pref_num_questions_summary">Enter number of questions in a quiz(between 5 to  25 )</string>
    <string name="timer">Set Quiz Time</string>
    <string name="timer_summary">Timer coming soon .....</string>
    <string name="pref_quiz_settings">Quiz Settings</string>
    <string name="practice_questions_setting">Practice Question Settings</string>
    <string name="number_of_question">Number of questions</string>
    <string name="go_main_menu">Main Menu</string>
    <string name="see_answers_text">See Answers</string>
    <string name="share_fb">Share With Friends</string>
    <string name="image">answer-image</string>
    <string name="prefsyncquestions">Select category of questions you wish to sync from server</string>
    <string name="pref_sync_questions_title">Sync latest General Knowledge Questions</string>
    <string name="title_activity_practice">Practice Test</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

</resources>