<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFC0" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/scoretableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/scoretextView"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textSize="@dimen/text_size" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/replayButton"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="1"
                style="@style/button_text"
                android:background="@drawable/red_button"
                android:gravity="center_horizontal"
                android:text="@string/go_main_menu" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/seeAnswerButton"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="1"
                style="@style/button_text"
                android:background="@drawable/red_button"
                android:gravity="center_horizontal"
                android:text="@string/see_answers_text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/shareFBButton"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="1"
                style="@style/button_text"
                android:background="@drawable/red_button"
                android:gravity="center_horizontal"
                android:text="@string/share_fb" />
           
        </TableRow>
    </TableLayout>

    <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a15250822869d38"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
                         android:layout_alignParentBottom="true"
                         ads:loadAdOnCreate="true"/>
</RelativeLayout>
